[tool.poetry]
name = "ntdsdotsqlite"
version = "0.9.5"
description = "A small utility to get an SQLite  database from an NTDS.DIT file."
authors = ["Virgile Jarry <virgile@mailbox.org>"]
readme = "README.md"
license = "Beerware"
homepage = "https://github.com/almandin/ntdsdotsqlite"
repository = "https://github.com/almandin/ntdsdotsqlite"
documentation = "https://github.com/almandin/ntdsdotsqlite/README.md"

[tool.poetry.dependencies]
python = "^3.9"
dissect = {extras = ["ese"], version = "^3.5"}
impacket = "^0.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
ntdsdotsqlite = 'ntdsdotsqlite.__main__:main'